# ray-k3s-deployment

./: README.md  inference_results_1767822148.txt  pyproject.toml  requirements.txt  setup.py
.cursor/rules/: notes-mcp-reference.mdc
examples/: 0_shutdown_models.py  1_deploy_models.py  1_test_inference.py  2_test_inference.py  2_test_model_configs.py  3_test_full_deployment.py
manifests/: nvidia-device-plugin.yaml  raycluster.yaml  vram-scheduler-configmap.yaml
ray_hive/: __init__.py  client.py  inference.py  langchain.py  openai_compat.py  shutdown.py
ray_hive/core/: __init__.py  model_orchestrator.py  model_router.py  vllm_model_actor.py  vram_allocator.py
ray_hive/utils/: __init__.py  ray_utils.py
scripts/: check-nvidia-container-toolkit.sh  verify-gpu-resources.sh
scripts/vram-scheduler/: 0_shutdown_models.py  1_deploy_models.py  2_deploy_max_llms.py  3_measure_model_vram.py  4_test_inference.py  model_orchestrator.py  ray_utils.py  temp_log.txt  vllm_model_actor.py  vram_allocator.py
vram_scheduler/core/: model_router.py  vllm_model_actor.py
